- warnings and errors are highlighted in command log / console (warnings only for R >= 2.5.x)
- plugin generated commands are run in a local() environment, allowing for more consise code		TODO: document, adjust examples, adjust plugins, etc.
- also support filename completion in the console (mode of completion is determined by heuristic means)
- initial support for R's Sys.setlocale(), and Encoding of CHARSXPs
- in help files, a short title for sections (for the navigation bar) can be defined		TODO: document
- the currently active window is now highlighted using a thin red border
- fixed: changing the type of a column in the data editor was broken
- fixed: quitting while a plugin was still active would sometimes crash rkward
- new shortcuts for window navigations: next/previous window, activate console, activate command log, etc.
- new functions rk.describe.alternative () and rk.print.literal () for use in plugins
- new plugin: Phillips-Perron test
- new plugin: Mood test
- new plugins: variance tests (F test (aka var.test), Bartlett test, Flingner test)
- new plugin: plugin pareto chart
- new plugin: plugin stem-and-leaf plot
- make readline dialog store last size and position
- new plugins: outlier tests (chisq.out.test, dixon.test, grubbs.test, outlier)
- support R's mechanism for checking the C stack limits (only with R 2.3.x or greater, and not on all platforms)
- support of all tests from moments package
- new help page: "Trouble Shooting"
- better error handling in PHP backend
- fixed: depending on some buffer sizes, plugins could get stuck while generating code
- fixed: plugin browser type="dir" would not work correctly
- import SPSS and import CSV plugins gain option to open object for editing, automatically (checked by default)
- warn when opening very large objects (with more than 250000 fields; this limit is configurable)