@@ -147,6 +147,7 @@ RKConsole::RKConsole (QWidget *parent, bool tool_window, char *name) : RKMDIWind
 
 	current_command = 0;
 	tab_key_pressed_before = false;
+	command_was_piped = false;
 }
 
 RKConsole::~RKConsole () {
@@ -181,6 +182,7 @@ bool RKConsole::handleKeyPress (QKeyEvent *e) {
 
 	uint para=0; uint pos=0;
 	view->cursorPosition (&para, &pos);
+	command_was_piped = false;
 
 	if (para < doc->numLines() - 1 || pos < prefix.length ()) {	// not inside the last line?
 		int t = (int) pos;					// adjust position before interpreting keystroke
@@ -767,7 +769,7 @@ void RKConsole::pipeCommandThroughConsoleLocal (RCommand *command) {
 	RK_TRACE (APP);
 
 	activate (false);
-	if (isBusy () || (!currentCommand ().isEmpty ())) {
+	if ((!command_was_piped) && (isBusy () || (!currentCommand ().isEmpty ()))) {
 		int res = KMessageBox::questionYesNo (this, i18n ("You have configured RKWrad to run script commands through the console. However, the console is currently busy (either a command is running, or you have started to enter text in the console). Do you want to bypass the console this one time, or do you want to try again later?"), i18n ("Console is busy"), KGuiItem (i18n ("Bypass console")), KGuiItem (i18n ("Cancel")));
 		if (res == KMessageBox::Yes) {
 			RKGlobals::rInterface ()->issueCommand (command);
@@ -779,6 +781,7 @@ void RKConsole::pipeCommandThroughConsoleLocal (RCommand *command) {
 		command->addReceiver (this);
 		command->addTypeFlag (RCommand::Console);
 		current_command = command;
+		command_was_piped = true;
 		RKGlobals::rInterface ()->issueCommand (command);
 	}
 }
